--- a/docker-compose.ec2.yml
+++ b/docker-compose.ec2.yml
@@ -151,7 +151,6 @@ services:
       MINIO_ROOT_USER: ${AWS_ACCESS_KEY_ID}
       MINIO_ROOT_PASSWORD: ${AWS_SECRET_ACCESS_KEY}
 
-  # Comment this if you already have a reverse proxy running
   proxy:
     container_name: proxy
     build:
@@ -159,16 +158,29 @@ services:
       dockerfile: Dockerfile.nginx
     restart: always
     ports:
-      - ${LISTEN_HTTP_PORT:-80}:80
-      - ${LISTEN_HTTPS_PORT:-443}:443
+      - "80:80"
+      - "443:443"
     environment:
       FILE_SIZE_LIMIT: ${FILE_SIZE_LIMIT:-5242880}
       BUCKET_NAME: ${AWS_S3_BUCKET_NAME:-uploads}
+      NGINX_HOST: ${NGINX_HOST:-localhost}
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt:ro
+      - ./certbot/www:/var/www/certbot:ro
     depends_on:
       - web
       - api
       - space
       - admin
+
+  certbot:
+    container_name: certbot
+    image: certbot/certbot
+    restart: unless-stopped
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 volumes:
   pgdata:
