--- a/apps/proxy/Dockerfile.nginx
+++ b/apps/proxy/Dockerfile.nginx
@@ -5,12 +5,9 @@ RUN apk add --no-cache bash
 # Remove default config
 RUN rm /etc/nginx/conf.d/default.conf
 
-# Create certbot webroot directory
-RUN mkdir -p /var/www/certbot
+# Copy nginx config directly (no template substitution needed)
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Copy nginx config template
-COPY nginx.conf /etc/nginx/templates/default.conf.template
-
-EXPOSE 80 443
+EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
