--- a/apps/proxy/nginx.conf
+++ b/apps/proxy/nginx.conf
@@ -22,32 +22,16 @@ upstream minio_upstream {
     server plane-minio:9000;
 }
 
-# HTTP - redirect to HTTPS (except ACME challenge)
-server {
-    listen 80;
-    server_name ${NGINX_HOST};
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
 }
 
-# HTTPS
 server {
-    listen 443 ssl;
-    server_name ${NGINX_HOST};
+    listen 80;
+    server_name _;
 
-    ssl_certificate /etc/letsencrypt/live/${NGINX_HOST}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${NGINX_HOST}/privkey.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-
-    client_max_body_size ${FILE_SIZE_LIMIT};
+    client_max_body_size 50m;
     large_client_header_buffers 4 32k;
 
     # Spaces app
@@ -58,7 +42,7 @@ server {
         proxy_pass http://space_upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -73,7 +57,7 @@ server {
         proxy_pass http://admin_upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -85,7 +69,7 @@ server {
         proxy_pass http://live_upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -122,8 +106,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # MinIO bucket
-    location /${BUCKET_NAME}/ {
+    # MinIO bucket - uploads
+    location /uploads/ {
         proxy_pass http://minio_upstream;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
@@ -131,7 +115,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-    location = /${BUCKET_NAME} {
+    location = /uploads {
         proxy_pass http://minio_upstream;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
@@ -145,7 +129,7 @@ server {
         proxy_pass http://web_upstream;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
