--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,13 +1,13 @@
 # Backend
 # Debug value for api server use it as 0 for production use
 DEBUG=0
-CORS_ALLOWED_ORIGINS="http://localhost:3000,http://localhost:3001,http://localhost:3002,http://localhost:3100"
+CORS_ALLOWED_ORIGINS=http://65.0.86.159,http://localhost:3000,http://localhost:3001,http://localhost:3002
 
 # Database Settings
-POSTGRES_USER="plane"
-POSTGRES_PASSWORD="plane"
-POSTGRES_HOST="plane-db"
-POSTGRES_DB="plane"
+POSTGRES_USER=plane
+POSTGRES_PASSWORD=plane123
+POSTGRES_HOST="postgres"
+POSTGRES_DB=plane
 POSTGRES_PORT=5432
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
