--- a/docker-compose.ec2.yml
+++ b/docker-compose.ec2.yml
@@ -140,16 +140,16 @@ services:
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
 
-  plane-minio:
-    container_name: plane-minio
-    image: minio/minio
-    restart: always
-    command: server /export --console-address ":9090"
-    volumes:
-      - uploads:/export
-    environment:
-      MINIO_ROOT_USER: ${AWS_ACCESS_KEY_ID}
-      MINIO_ROOT_PASSWORD: ${AWS_SECRET_ACCESS_KEY}
+  #plane-minio:
+  #  container_name: plane-minio
+  #  image: minio/minio
+  #  restart: always
+  #  command: server /export --console-address ":9090"
+  #  volumes:
+  #    - uploads:/export
+  #  environment:
+  #    MINIO_ROOT_USER: ${AWS_ACCESS_KEY_ID}
+  #   MINIO_ROOT_PASSWORD: ${AWS_SECRET_ACCESS_KEY}
 
   proxy:
     container_name: proxy
@@ -173,15 +173,15 @@ services:
       - space
       - admin
 
-  certbot:
-    container_name: certbot
-    image: certbot/certbot
-    restart: unless-stopped
-    volumes:
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
-
+  # certbot:
+  #  container_name: certbot
+  #  image: certbot/certbot
+  # restart: unless-stopped
+  #  volumes:
+  #    - ./certbot/conf:/etc/letsencrypt
+  #    - ./certbot/www:/var/www/certbot
+   ## entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+ 
 volumes:
   pgdata:
   redisdata:
